# ra-dev

./: .gitignore  Makefile.in  README.md  Rd.txt  RdBase.txt  athena-start  configure  configure.ac  function.sh  rAthena.sln  rebuild.sh  start_turbo.sh  voiceserv.bat  watchdog.sh
conf/: atcommands.yml  char_athena.conf  groups.yml  inter_athena.conf  map_athena.conf  maps_athena.conf  subnet_athena.conf  voice_athena.conf
conf/battle/: client.conf  exp.conf  feature.conf  items.conf  misc.conf  monster.conf  pet.conf  player.conf
conf/msg_conf/: char_msg.conf  login_msg.conf  map_msg.conf
db/: emotion_db.yml  rune_db.yml  runebook_db.yml  runedecomposition_db.yml  stylist.yml  voice_blocked_maps.yml
db/custom/: ai_attack_skill.txt  ai_heal_skill.txt  ai_item_buff.txt  ai_support_skill.txt
db/import/: stylist.yml
db/re/: item_db_etc.yml  item_db_usable.yml  item_group_db.yml  job_aspd.yml  mob_db.yml  skill_db.yml  stylist.yml
doc/: atcommands.txt  script_commands.txt  voice_chat.txt
npc/: scripts_custom.conf
npc/custom/: barters.yml
npc/custom/batmandev/: PetEvolution.txt  ai_example.txt  aura_vips.txt  auratest.txt  autoattack.txt  barters.yml  event_manager_TH.txt  hateffect.txt  jobmaster.txt  npc_AmmunitionDealer.txt  npc_Booster.txt  npc_Buff_vip.txt  npc_CardRemove.txt  npc_CopySkill.txt  npc_DyeMerchant.txt  npc_EPClearTicket.txt  npc_GymPass.txt  npc_ToolDealer.txt  npc_beginner.txt  npc_class3.txt  npc_costumeMalangdo.txt  npc_enchant.txt  npc_enchant_AverDeDosh.txt  npc_enchant_LaceLaZard.txt  npc_enchant_malangdo.txt  npc_general.txt  npc_mall_center.txt  npc_pet.txt  npc_refine.txt  npc_refine_guarantee.txt  npc_rental.txt  npc_reset.txt  npc_shop_guarantee.txt  npc_storage.txt  premium.txt  rune_npc.txt  server_rate_manager.txt  stylist.txt  warper.txt
npc/custom/batmandev/main_ui_menu/: main_ui_menu.txt
npc/custom/batmandev/mapflag/: noautoattack.txt
npc/custom/batmandev/monster/: spawn.txt
npc/custom/batmandev/warp/: warp.txt
npc/re/mobs/: int_land.txt
npc/re/warps/cities/: izlude.txt
sql-files/: Ai_V3-2024-07.sql  ipban_HWID.sql  main.sql  mob_ele_view.sql  rune_system.sql  storage_collection.sql  voice_chat.sql  web_news.sql
src/: CMakeLists.txt
src/char/: char.cpp  inter.cpp
src/common/: core.cpp  mmo.hpp
src/config/: core.hpp
src/custom/: battle_config_init.inc  battle_config_struct.inc
src/login/: ipban.cpp  ipban.hpp  login.cpp  login.hpp  loginclif.cpp
src/map/: atcommand.cpp  battle.cpp  battle.hpp  chat.cpp  chrif.cpp  chrif.hpp  clif.cpp  clif.hpp  clif_packetdb.hpp  collection.cpp  collection.hpp  guild.cpp  homunculus.cpp  homunculus.hpp  intif.cpp  itemdb.cpp  itemdb.hpp  map-server-generator.vcxproj  map-server-generator.vcxproj.filters  map-server.vcxproj  map-server.vcxproj.filters  map.cpp  map.hpp  mob.cpp  npc.cpp  npc.hpp  packets.hpp  packets_struct.hpp  pc.cpp  pc.hpp  pet.cpp  pet.hpp  rune.cpp  rune.hpp  script.cpp  script.hpp  script_constants.hpp  skill.cpp  skill.hpp  status.cpp  (+5 more)
src/voice/: CMakeLists.txt  Makefile.in  config.cpp  config.hpp  main.cpp  player.hpp  room_manager.cpp  room_manager.hpp  server.cpp  voice-server.vcxproj  voice_transport.cpp  voice_transport.hpp  whisper_manager.cpp  whisper_manager.hpp
tools/: runserver.bat
